@@ -1,3 +1,7 @@
+2000-06-12  Dave Love  <fx@gnu.org>
+
+	* image.el (insert-image): Save a little consing.
+
 2000-06-12  Kenichi Handa  <handa@etl.go.jp>
 
 	* language/tibet-util.el: Convert all tibetan-1-column characters
